	  string.  Also, return the stripped path instead of modifying
	  path. (DLR)
- files.c:
  do_insertfile()
	- If we're in view mode, as we can be if multibuffer mode is on,
	  don't mark the file as modified. (DLR)
	- If we execute a command in a new buffer, move back to the
	  beginning of the first line of the buffer afterwards, for
	  consistency. (DLR)
  get_full_path()
	- Don't return NULL when the current directory doesn't exist, as
	  we can still recover from that. (DLR, found by Mike Frysinger)
	- Add various cleanups. (DLR)
- help.c:
  do_help()
	- Simplify screen update handling and exiting. (DLR)
- move.c:
  do_scroll_up(), do_scroll_down()
	- Fix problems where, after scrolling, the previous and current
	  lines would not be updated properly if the current line was
	  not the first or last line of the edit window. (DLR, found by
	  Mike Frysinger)
- nano.h:
	- Remove the manual disabling of color support if regex.h isn't
	  found, as configure.ac now handles that. (DLR)
- text.c:
  execute_command()
	- Remove the marking of the file as modified, as do_insertfile()
	  handles that. (DLR)
- winio.c:
  display_string()
	- Properly handle buf[start_index]'s being a null terminator.
	  (DLR)
  titlebar()
	- Don't display overly long filenames with ellipses if the
	  number of columns is extremely small. (DLR)
	- Don't display any blank space for the state if we're in the
	  file browser, as Pico doesn't. (DLR)
- configure.ac:
	- If regex.h isn't found, display an error message if we try to
	  enable color support. (DLR)
	- Fix the spacing of the error message displayed when slcurses.h
	  isn't found. (DLR)
- doc/syntax/c.nanorc:
	- Since .i and .ii are preprocessed C and C++ output, colorize
	  them here. (Mike Frysinger)
- doc/syntax/ruby.nanorc:
	- Add missing blank line after the first comment, for
	  consistency. (DLR)
	- Improve highlighting of constants. (John M. Gabriele, minor
	  tweaks by DLR)

GNU nano 1.3.12 - 2006.06.26
- General: